Streams are not rescued when card profile is switched to off
Summary
If you have streams running on some card and the card profile is switched to "off", the streams are killed instead of rescued. This is a regression, probably caused by !209 (merged)
environment
This bug only applies to current git. Otherwise the exact setup is not relevant, any environment with two cards will do.
Steps to reproduce
Have two sound cards. Choose a profile for each card, set the sink of one card as default. Play something on the sink of the other card. While playing, switch the profile of the corresponding card to "off". The stream will be killed.
What is the current bug behavior?
Stream gets killed when card profile is set to "off"
What is the expected correct behavior?
Stream gets rescued to the default sink when card profile is switched to "off"